# todo-rust-spa

./: .dockerignore  .gitignore  Dockerfile  README.md  SETUP.md  deploy.sh  docker-compose.yml  load.js
backend/: Cargo.toml  package.json
backend/src/: main.rs
backend/src/handlers/: todos.rs
backend/src/models/: todo.rs
frontend/: .cta.json  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: AddTodo.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/lib/: api.ts
frontend/src/routes/: index.tsx
