[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }

# MongoDB
mongodb = "3.4.1"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# Static file serving
rust-embed = "8.9.0"
mime_guess = "2.0.5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
